--- a/public/homepage.css
+++ b/public/homepage.css
@@ -93,10 +93,10 @@ button {
 }
 
 /* Style for the button to open the navbar */
-.openbtn {
+.openNav {
     font-size: 20px;
     cursor: pointer;
-    background-color:rgba(0, 0, 0, 0.3);
+    /* background-color:rgba(0, 0, 0, 0.3); */
     color: white;
     padding: 10px 15px;
     border: none;
@@ -104,7 +104,7 @@ button {
     position: relative;
 }
 
-.openbtn:hover {
+.openNav:hover {
     background-color: #444;
 }
 
@@ -124,10 +124,6 @@ main {
     display: flex;
     align-items: center; /* Align items vertically */
     gap: 10px; /* Add spacing between the button and the header */
-}
-
-.openbtn {
-    margin: 0; /* Remove any default margin */
 }
 
 .home-page__title {
