--- a/public/homepage.css
+++ b/public/homepage.css
@@ -7,7 +7,7 @@
 
 /* Apply the Ghibli-style background */
 body {
-    background-image: url('pics/ghibli-bg.png'); /* Set the background image */
+    background-image: url('images/ghibli-bg.png'); /* Set the background image */
     background-size: cover; /* Makes the image cover the entire viewport */
     background-position: center; /* Centers the image */
     background-repeat: no-repeat; /* Prevents tiling */
