--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -27,8 +27,8 @@
     <!-- navbar -->
     <div id="nav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
+        <a href="/main-feed">Explore Restaurant Reviews</a>
+        <a href="/review.html">Submit a Review</a>
         <a href="#">Clients</a>
         <a href="#">Contact</a>
     </div>
