--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -27,7 +27,7 @@
     <!-- navbar -->
     <div id="nav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="/main-feed">Explore Restaurant Reviews</a>
+        <a href="/main-feed">Explore Restaurants</a>
         <a href="/review.html">Submit a Review</a>
         <a href="#">Clients</a>
         <a href="#">Contact</a>
