--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -19,7 +19,7 @@
         <div class="header-row">
             <button class="openNav" onclick="openNav()">&#9776;Menu</button>
             <h1 class="home-page__title">Welcome to BlueBelly</h1>
-            <button class="login">Sign Up/ Login</button>
+            <a href="/login" class="login">Sign Up/ Login</a>
         </div>
         <p>a platform catered to the Wellesley community </p>
         <button class="home-page__cta">Get Started</button>
@@ -35,6 +35,5 @@
 
 
 </main>
-
 </body>
 </html>
