--- a/views/login.ejs
+++ b/views/login.ejs
@@ -39,7 +39,7 @@
         <div class="modal-content">
             <span class="close">&times;</span>
             <h2>Sign Up</h2>
-            <form action="/signup" method="post">
+            <form id="signup-form" action="/signup/" method="post">
                 <label for="signup-name">Full Name:</label>
                 <input type="text" id="signup-name" name="name" required>
                 <br>
