--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,7 +22,7 @@
         <!-- Right Column -->
         <div class="right-column">
             <h2>Login</h2>
-            <form action="/login" method="post">
+            <form action="/logging-in" method="post">
                 <label for="login-username">Username:</label>
                 <input type="text" id="login-username" name="username" required>
                 <br>
