--- a/views/logged-in.ejs
+++ b/views/logged-in.ejs
@@ -11,7 +11,7 @@
         <h1>Welcome Back to BlueBelly, <%= username %>!</h1>
         <nav>
             <a href="/main-feed">Main Feed</a>
-            <a href="/user/<%= username %>">Your Profile</a>
+            <a href="/profile/">Your Profile</a>
             <form action="/logout" method="post" style="display:inline;">
                 <button type="submit">Logout</button>
             </form>
