added update function, but change not on browser

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -29,8 +29,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="/main-feed">Explore Restaurants</a>
         <a href="/review.html">Submit a Review</a>
-        <a href="#">Clients</a>
-        <a href="#">Contact</a>
+        <a href="/profile">Profile</a>
     </div>
 
 
