--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,8 +1,17 @@
+<head>
+  <meta charset="UTF-8">
+  <title>User Profile</title>
+  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="/homepage.css"> <!-- Link to homepage.css -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="/script.js"></script>
+</head>
+
 <nav>
-  <ul>
-     <li><a href="/">home</a></li>
-     <li><a href="/about">about</a></li>
-     <li><a href="/contact">contact</a></li>
-     <li><a href="/order">order</a></li>
-  </ul>
+  <div id="nav" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="/main-feed">Explore Restaurants</a>
+    <a href="/review.html">Submit a Review</a>
+    <a href="/profile">Profile</a>
+  </div>
 </nav>
