--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="header-row">
             <button class="openNav" onclick="openNav()">&#9776;Menu</button>
-            <h1 class="home-page__title">Welcome to BlueBelly</h1>
+            <h1 class="home-page_title">Welcome to BlueBelly</h1>
             <a href="/login" class="login">Sign Up/ Login</a>
         </div>
         <p>a platform catered to the Wellesley community </p>
