--- a/views/logged-in.ejs
+++ b/views/logged-in.ejs
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <%- include('partials/navbar') %>
         <h1>Welcome Back to BlueBelly, <%= username %>!</h1>
         <nav>
             <a href="/main-feed">Main Feed</a>
