--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,6 +7,10 @@
   <script src="/script.js"></script>
 </head>
 
+<div class="header-row">
+  <button class="openNav" onclick="openNav()">&#9776;Menu</button>
+</div>
+
 <nav>
   <div id="nav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
