update review working!

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -39,6 +39,7 @@
                 </form> -->
 
                 <button class="edit-button"
+                    data-review-id="<%= review._id %>"
                     data-restaurant="<%= review.restaurant %>"
                     data-address="<%= review.address %>"
                     data-rating="<%= review.rating %>"
