--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -14,6 +14,7 @@
 <nav>
   <div id="nav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="/">Home Page</a>
     <a href="/main-feed">Explore Restaurants</a>
     <a href="/review.html">Submit a Review</a>
     <a href="/profile">Profile</a>
