deleted css oops

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -21,8 +21,10 @@
             <h1 class="home-page_title">Welcome to BlueBelly</h1>
             <a href="/login" class="login">Sign Up/ Login</a>
         </div>
-        <p>a platform catered to the Wellesley community </p>
-        <button class="home-page__cta">Get Started</button>
+        <p>BlueBelly is a platform catered to food-lovers in the Wellesley community.
+            Explore our crowdsourced database of restaurant reviews in the Boston area or
+            add one of your own!
+        </p>
     </div>
     <!-- navbar -->
     <div id="nav" class="sidenav">
