--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>User Profile</title>
@@ -20,3 +22,4 @@
     <a href="/profile">Profile</a>
   </div>
 </nav>
+</html>
